--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>OpenShift workshops</title>
+  <title>Red Hat Workshops</title>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" type="text/css" href="https://bootswatch.com/paper/bootstrap.min.css">
@@ -27,7 +27,7 @@
   <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav navbar-right">
       <li class="hidden-xs hidden-sm">
-        <a href="https://docs.openshift.com/" class="nav-sign-up" target="_blank">Documentation</a>
+        <a href="https://docs.redhat.com/" class="nav-sign-up" target="_blank">Documentation</a>
       </li>
     </ul>
   </div>
